--- a/src/Components/Login/Login.module.css
+++ b/src/Components/Login/Login.module.css
@@ -98,3 +98,54 @@
     color: white;
     border: 1px gray solid;
 }
+
+/* ............ */
+
+/* 
+.inputField {
+    position: relative;
+  }
+  
+  .inputField input {
+    padding: 8px 20px;
+    padding-top: 18px;
+    border: 1.8px solid rgba(107, 107, 107, 0.4);
+    border-radius: 3px;
+    width: 50%;
+    color: white;
+  }
+  
+  .inputField input:focus {
+    border: 1.8px solid #6b6b6b;
+    outline: none;
+  }
+  
+  .inputField span {
+    pointer-events: none;
+    opacity: 0.5;
+    position: absolute;
+    padding-left: 20px;
+    left: 0;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+    transform: translateY(-50%);
+    cursor: text;
+  }
+  .inputField input:focus+span,
+.inputField input:not(:placeholder-shown)+span {
+  top: 7px;
+  -webkit-transform: scale(0.7) translateY(-10%) translateX(-8.5px);
+  transform: scale(0.7) translateY(-10%) translateX(-8.5px);
+}
+
+.inputField input,
+.inputField span {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
+  -webkit-transition-timing-function: cubic-bezier(0.25, 0.1, 0.25, 1);
+  transition-timing-function: cubic-bezier(0.25, 0.1, 0.25, 1);
+} */
