--- a/src/Components/Registration/Register.module.css
+++ b/src/Components/Registration/Register.module.css
@@ -63,6 +63,7 @@
     border: none;
     outline: none;
     font-size: 18px;
+    margin-top: 1rem;
   
 }
 .mainContainer{
@@ -98,6 +99,7 @@ padding-left: 0px;
     color: white;
     border: 1px gray solid; 
     border-radius: 0.3rem;
+    
     
 }
 .input2{
